2018-01-02  Araki Ken  <arakiken@users.sf.net>

	* DRCS-SIXEL-v2, libvterm/README: Updated.

	* vterm.c: Adjusting vterm->drcs_charset and vterm->drcs_planeiis placed
	  before DRCS-SIXEL sequence is output.

2018-01-01  Araki Ken  <arakiken@users.sf.net>

	* DRCS-SIXEL-v2: Updated.

	* vterm.c: col_size_of_width_a is 1 if locale is ja_XX.XX.

2017-12-31  Araki Ken  <arakiken@users.sf.net>

	* DRCS-SIXEL-v2: Updated.

	* vterm.c:
	  - q"%d;%d;%d;%d in sixel to be sent to terminal emulator as DRCS-Sixel is
	    skipped.
	  - 0x30-0x3f is accepted as vterm->drcs_charset.
	  - "DRCS_SIXEL_VERSION" environmental varaible is dropped and "DRCS_SIXEL=old"
	    is used.

	* vt_parser.c:
	  - 0x30-0x3f character set is accepted for drcs.
	  - Sixel sequence (in DRCS) which doesn't contain 'q' is accepted.
	  - "drcs_sixel_version" is dropped and "old_drcs_sixel" is added to OSC 5379-5381.

	* vt_drcs.[ch]: 0x30-0x3f character set is accepted.

	* ef_charset.h: The range of CS96SB_ID() is changed from 0x40-0x7e to 0x30-7e
	  to handle drcs correctly.

2017-12-31  Araki Ken  <arakiken@users.sf.net>

	* DRCS-SIXEL-v2: Updated.

	* vt_parser.c: 'font->pic_num_cols > 0' => vt_drcs_is_picture()

	* vt_drcs.[ch]:
	  - The position of 'return 0' is fixed.
	  - vt_drcs_is_picture() is added.

2017-12-30  Araki Ken  <arakiken@users.sf.net>

	* vterm.c: cell->attrs.reverse is set in vterm_screen_get_cell().

	* vt_parser.c: DRCS-Sixel is enclosed by #ifndef NO_IMAGE ... #endif.

2017-12-30  Araki Ken  <arakiken@users.sf.net>

	* vterm.c: xterm_get_picture_data() rejects files except sixel.

2017-12-30  Araki Ken  <arakiken@users.sf.net>

	* vt_parser.c: If vt_parser->pty is NULL or not is checked in write_loopback()
	  because vt_term_write_loopback() in open_pty_intern() in ui_screen_manager.c
	  can be called when vt_parser->pty is NULL in connecting to ssh server.

	* vterm.c: default_fg and default_bg are the same as original libvterm.
