@@ -1,3 +1,9 @@
+2018-01-03  Araki Ken  <arakiken@users.sf.net>
+
+	* ui_font_config.c: ui_font_config_dump() outputs "_FULLWIDTH".
+
+	* vterm.c: Pcmw and Pcmh in DECDLD are correctly set.
+
 2018-01-02  Araki Ken  <arakiken@users.sf.net>
 
 	* DRCS-SIXEL-v2, libvterm/README: Updated.
